# live-walrus-demo

./: .dockerignore  .env  .env.example  .gitignore  COMMIT_INSTRUCTIONS.md  CONFIGURATION_COMPLETE.md  DEPLOYMENT.md  Dockerfile  FIXES.md  FORK_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  NEXT_STEPS.md  POWERSHELL_SETUP.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  VERIFYING_KEY_DEBUG.md  VERIFYING_KEY_FORMAT_ISSUE.md  VERIFYING_KEY_REGISTRATION_ISSUE.md  VERIFYING_KEY_SOLUTION.md  VERIFYING_KEY_SOLUTION_V2.md  app.js  app.jsnano  bundle.json  capabilityRegistry.js  capability_bound_count_merkle_v1.zkey  capability_bound_count_merkle_v1_vkey.json  capability_bound_count_merkle_v2_vkey.json  capability_bound_count_v2.r1cs  capability_bound_count_v2.zkey  capability_bound_count_v2_vkey.json  capability_param_count_v2.zkey  capability_param_count_v2_vkey.json  create-demo-branch.sh  datasetRegistry.js  decrypt_from_walrus.js  decrypt_poseidon.js  decrypt_poseidon_fixed.js  (+35 more)
circuits/: .env  Move.toml  age_over_18_10.circom  age_over_18_10_vkey.json  age_over_18_count_10.circom  age_over_18_count_10_vkey.json  aggregate_avg.circom  aggregate_count.circom  aggregate_count_vkey.json  aggregate_sum.circom  app.js  capability_bound.circom  capability_bound_count.circom  capability_bound_count_merkle_v1.circom  capability_bound_count_merkle_v2.circom  capability_bound_count_v2.circom  capability_param_count_v1.circom  capability_param_count_v2.circom  condition_count.circom  (+56 more)
proof-converter/: Cargo.toml
proof-converter/src/: main.rs
(+185 files in other folders)
