[package]
name = "proof-converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proof-converter"
path = "src/main.rs"

[dependencies]
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
num-bigint = "0.4"
